
2009-03-30 tdb
 * Added upgrade to DB schema 3.1.2 - fix null parts of names

2009-03-30 cjg
 * Added spinny ajax loading icon to autocompleter.

2009-04-01 tdb
 * Added "profile" command to epadmin (run a unit test under profiling)
 * Added OnlineSession utility test module

2009-04-01 dct
 * Updated Plugin/Screen/Admin/Config/Edit.pm to allow users to download fully encapsulated web pages for offline editing before re-uploading them via the same page. The uploaded content is split back into phrases and page parts which are put back in the correct EPrints places.
 * Updated above such that edited phrases are put in the zz_webcfg.xml phrase file and not in the archive phrase file. 

2009-04-02 tdb
 * Refactored MetaField to speed up load time & not to allocate memory for
    undef
 * Refactored Plugin registry to "PluginFactory" (same access via Session)

2009-04-03 tdb
 * Changed default type for creators_id to email
 * Email searches now perform exact matches rather than text indexing

2009-04-06 tdb
 * Create database columns using utf8 character set
 * database upgrade 3.2.0 converts utf8-in-latin to utf8

2009-04-06 tdb
 * Reverted [4159]
 * Index complete emails in the indexer to allow correct search-by-email

2009-04-07 tdb
 * Added "reload_metafields" to epadmin to reload metafields dataset
 * Added cgi/schema to access the repository's schema + schema fixes
 * Ignore blank lines in DOI import and check for "malformed" response

2009-04-07 tdb
 * Refactoured DataObj creation to reduce redundant commits/objects

2009-04-08 tdb
 * Added unit_test for Plugin::Screen

2009-04-15 tdb
 * Removed <div> wrapper from message contents
 * Added a "secure_auto.js" that specifies the correct HTTP paths
 * Added an explicit secure.xml template default (links to secure_auto.js)

2009-04-16 cjg
 * Added JSON support.

2009-04-16 cjg
 * Added config. options and better error handling to JSON code.

2009-04-16 cjg
 * Fixed issue with 403 in JSON, and when eprint not found.